gcc/testsuite/algol68/compile/modules/program-error-multiple-delaration-module-1.a68
{ dg-modules "module10 module11 module12" }

access Module10,
       Module11,
       Module11 { dg-error "multiple declaration.*bar" }
begin assert (foo = 10);
      assert (bar = 20)
end
